# avx-perf-exercises

./: CMakeLists.txt
include/: Modulate.h  common.h  halfFloat.h  perf-measure.h
src/: Demodulate.cpp  Modulate.cpp  TestModulate.cpp  main.cpp
src/modulate/: CMakeLists.txt  modulate.cpp  modulate_avx.cpp  modulate_generic.cpp
test/: CMakeLists.txt  main.cpp  modulate_ut.cpp
win/: avx-perf-test.sln  avx-perf-test.vcxproj  avx-perf-test.vcxproj.filters
win/avx-perf-exercises-tests/: avx-perf-exercises-tests.vcxproj
